--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^6.0.0",
         "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
+        "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.6",
+        "sass": "^1.56.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.14",
         "vue": "^3.5.17"
     }
