--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.14",
+        "lucide": "^0.525.0",
+        "lucide-vue-next": "^0.525.0",
         "vue": "^3.5.17",
         "ziggy-js": "^2.5.3"
     }
